update login form

--- a/LoginForm/app/src/main/res/layout/activity_main.xml
+++ b/LoginForm/app/src/main/res/layout/activity_main.xml
@@ -9,13 +9,15 @@
     <Button
         android:id="@+id/button"
         android:layout_width="0dp"
-        android:layout_height="66dp"
+        android:layout_height="55dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginBottom="36dp"
+        android:background="@drawable/bgbtn"
         android:text="Login"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -25,15 +27,21 @@
     <EditText
         android:id="@+id/editTextTextPersonName"
         android:layout_width="0dp"
-        android:layout_height="45dp"
+        android:layout_height="55dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
+        android:background="@drawable/bgtext"
+        android:drawableLeft="@drawable/user"
+        android:drawablePadding="10dp"
         android:ems="10"
         android:hint="User Name"
         android:inputType="textPersonName"
+        android:paddingLeft="15dp"
+        android:paddingRight="5dp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,15 +50,21 @@
     <EditText
         android:id="@+id/editTextTextPassword"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
+        android:background="@drawable/bgtext"
+        android:drawableLeft="@drawable/pass"
+        android:drawablePadding="10dp"
         android:ems="10"
         android:hint="PassWord"
         android:inputType="textPassword"
+        android:paddingLeft="15dp"
+        android:paddingRight="5dp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,12 +76,13 @@
         android:layout_height="35dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:gravity="center"
         android:text="Forgot Your Password?"
-        android:textSize="15sp"
+        android:textColor="#2196F3"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
